# Muse

./: .vercelignore
backend/: app.py  pyproject.toml  requirements.txt  sync.py  test_audio.aiff  test_checklist.py  video.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/pages/: EditPage.jsx  PreviewPage.jsx  ResultPage.jsx  UploadPage.jsx
