[project]
name = "muse-backend"
version = "0.1.0"
description = "Backend for Lyric Video Creator (Optimized for Vercel)"
requires-python = ">=3.12"
dependencies = [
    "setuptools<82.0.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "openai>=1.0.0",
    "mutagen==1.47.0",
    "dtaidistance==2.3.11",
    "ffmpeg-python==0.2.0",
    "python-multipart==0.0.9",
    "pydantic==2.8.2",
    "numpy>=1.26.0",
]

[tool.uv.extra-build-dependencies]
# No longer need special build deps for whisper as we use the API
